feat: implementa visualização de eventos criado pelo mesmo adm
