# swagger.json
@@ -272,7 +272,29 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ResponseEvento"
+                                    "$ref": "#/components/schemas/ResponseEventos"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/eventos/me": {
+            "get": {
+                "description": "Detalhe de todos os eventos pelo admin",
+                "tags": ["Evento"],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ResponseEventos"
                                 }
                             }
                         }
